crates/cyrs-sema/src/snapshots/cyrs_sema__resolve__tests__scope_func_unresolved_arg.snap
---
source: crates/cyrs-sema/src/resolve.rs
expression: "render_src(\"RETURN count(missing)\")"
---
scopes: 2
  scope[0] kind=Root parent=None bindings=[]
  scope[1] kind=Return parent=Some(0) bindings=[]
diagnostics: 1
  E1001: unresolved variable `missing`
