crates/cyrs-sema/src/snapshots/cyrs_sema__resolve__tests__scope_match_return.snap
---
source: crates/cyrs-sema/src/resolve.rs
expression: "render_src(\"MATCH (n) RETURN n\")"
---
scopes: 3
  scope[0] kind=Root parent=None bindings=[]
  scope[1] kind=Match parent=Some(0) bindings=["n"]
  scope[2] kind=Return parent=Some(1) bindings=[]
diagnostics: 0
